log/build_2023-08-12_01-47-22/my_bot/stderr.log
  File "/home/joas329/Desktop/rover_simulation/install/my_bot/lib/python3.10/site-packages/my_bot/PID.py", line 10
    from moveit_msgs.msg import DisplayTrajectory, RobotTrajectory, 
                                                                    ^
SyntaxError: trailing comma not allowed without surrounding parentheses

